cambios de ultimas hora del programa

--- a/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_es.arb
+++ b/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_es.arb
@@ -1,5 +1,5 @@
 {
-    "nombreApp": "Gestión Usuarios Tele",
+    "nombreApp": "Gestion Telemetria",
     "@nombreApp": {
       "description": "Nombre de la Aplicación."
     },
